--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: python
-  python:
-    - "3.7"
-  script:
-    - python test_pwgen.py -v
+
+python:
+  - "3.7"
+
+script:
+  - python test_pwgen.py -v
+
+branches:
+  only:
+    - master
