--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: python
 
 python:
   - "3.7"
-
 script:
   - python test_pwgen.py -v
-
+dist: xenial
+sudo: required
 branches:
   only:
     - master
